...
      {!isLoading && data &&
        <ScrollView style={{
          minHeight: 150,
          flexGrow: 1,
          maxHeight: 300,
        }} contentContainerStyle={styles.scrollContainer}>
          <Text style={styles.meaningSubtitle}>Meanings</Text>
          <Text selectable style={styles.meaningDefinition}>{data[0].meanings[0].partOfSpeech} - {data[0].meanings[0].definitions[0].definition}</Text>
          {data && data[0] && data[0].meanings && data[0].meanings.length > 1 && (

            <Text style={styles.meaningSubtitle}>
              Another Definitions
            </Text>
...
      <View style={
        {
          gap: 16,
        }
      }>
        <TouchableOpacity
          testID="favoriteButton"
          disabled={!data || !data[0]}
          onPress={() => {
            if (data && data[0]) {
              isfavorite
                ? RemoveFromFavorites()
                : AddToFavorites(data[0].word, data[0].phonetic || "")
...
