...
  return (
    <View style={styles.container}>
      {loading && <LoadingOverlay />}
      <IconHeader
        FaIcon={<Icon name='play' size={24} color={theme.colors.primary} iconStyle='solid' />}
        backgroundColor={theme.colors.primary}
        title='Lista de palavras'
        description='Para aprender uma palavra você pode clicar em uma das palavras abaixo.'
      />

      <SearchBar applyFilter={applyFilter} />
      <List words={filteredWords} key={
        textFilter
...
